Added more information about the ELISA image.

--- a/posts/2016-10-25.md
+++ b/posts/2016-10-25.md
@@ -10,7 +10,7 @@ date: 2016-10-25
 * Attended awesome GitHub workshop
 
 ## Ran ELISA
-I ran an ELISA this morning. The resulting data file can be found [here](../data/ElisaFile.tsv). An explanatory ELISA image is included below.
+I ran an ELISA this morning. The resulting data file can be found [here](../data/ElisaFile.tsv). An explanatory ELISA image is included below. This image it super cool and provides a ton of information!
 
 ![ELISA Image](https://resources.rndsystems.com/images/site/pb004_data_hmw_assay_960.png)
 
